# ring_search

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
Example/: Cristobalite_UC.xyz  Quartz_UC.xyz  Ring_Example.ipynb
script/: graph_creation.py  main.py  ring_search.py
searching_ring/: Molecular_Graph.py  Primitive_ring_search.py  graph_creation.py  main.py  new_ring_search.py  ring_search.py
tests/: test_all_shortest_paths.py  test_find_prime_node.py
