[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "searching_ring"
version = "0.0.1"
description = "Python script to compute primitive rings of silica structure"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Charles Rubirigi", email = "charles.rubirigi@unamur.be" }

]

maintainers = [
    { name = "Charles Rubirigi", email = "charles.rubirigi@unamur.be" }
]

classifiers = [
    # For a list of valid classifiers, see https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "numpy",
    "networkx",
    "matplotlib",
    "ase"  
]                     

[project.urls]
Homepage = "https://github.com/Crubirig/ring_search"

[tool.setuptools.packages.find]
where = ["."]
include = ["searching_ring"]
